# happy-thrift

./: .gitignore  cordova_notes.txt
happy-thrift-android/: apk_path (ANLAYO!).txt  config.xml  debug.lnk  package-lock.json  package.json
happy-thrift-android/www/src/: index.html  login.html
happy-thrift-api/: .gitignore  pyproject.toml  requirements.txt
happy-thrift-api/src/: main.py
happy-thrift-api/src/admin/: admin.py
happy-thrift-api/src/core/: auth.py  settings.py
happy-thrift-api/src/core/crud/: __init__.py  cart.py  categories.py  notifications.py  orders.py  products.py  users.py
happy-thrift-api/src/core/models/: __init__.py  cart.py  database.py  notifications.py  orders.py  product.py  user.py
happy-thrift-api/src/core/schemas/: __init__.py  notifications.py  orders.py  products.py  users.py
happy-thrift-api/src/routes/: account.py  auth.py  categories.py  orders.py  products.py
happy-thrift-frontend/: index.html
happy-thrift-frontend/assets/scripts/: index.js
happy-thrift-frontend/src/: login.html
happy-thrift-frontend/src/_scripts/: _ajaxfunctions_prototype.js  login.js
happy-thrift-frontend/src/admin/: categories.html  dashboard.html  dashboard_cancelled.html  dashboard_pending.html  dashboard_shipped.html  index.html  products.html  profile.html  reports.html
happy-thrift-frontend/src/user/: cart.html  checkout.html  checkout_cancel.html  index.html  notification.html  profile.html  profile_settings.html  profile_settings_address.html  profile_settings_security_password.html  profile_toreceive.html  profile_toship.html
(+62 files in other folders)
